--- a/styles.css
+++ b/styles.css
@@ -184,101 +184,6 @@ h1 {
 }
 
 
-
-
-
-
-
-
-/* #frhero img{
-    width: 100%;
-    overflow: hidden;
-}
-
-#txtbehind {
-    font-size: 30px;
-    transform: rotateX(-90deg);
-    color:black;
-    position: absolute;
-} */
-
-/* #failr img {
-    height: 80%;
-    
-}
-
-#herotxt1 {
-    position: absolute;
-    bottom: 45%;
-    font-size: 6em;
-    left: 30%;
-    color: #6f263d;
-}
-
-#herotxt2 {
-    position: absolute;
-    bottom: 30%;
-    left:30%;
-    font-size: 7em;
-    color: #6f263d;
-}
-
-#herotxt3 {
-    font-size: 0.8em;
-    font-family: 'PT Sans' ;
-    transform: rotate(-90deg);
-    position: absolute;
-    color: grey;
-    left:70%;
-    top:30%;
-    width: 500px;
-    text-align: left;
-    font-style: italic;
-}
-
-#resume {
-    position: relative;
-    top:20%;
-    left:40%;
-    width:300px;
-    color: rgba(0,0,0,0.5);
-}
-
-.gline {
-    border-left: 3px solid #FDBB30;
-}
-
-.wline {
-    border-left: 3px solid #6f263d;
-}
-
-@media (max-width:768px) {
-    #resume {
-    position: static;
-    padding: 20px;
-    height: 30vh;
-    }
-
-    #herotxt3 {
-    position: static;
-    visibility: hidden;
-   }
-
-    #herotxt2, #herotxt1 {
-    position: static;
-    font-size: 5em;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    }
-
-    #failr img {
-        height: 60%;
-        position: static;
-        
-    }
-} */
-
-
 /* -------------------------------matchup --------------------------------*/
 
 #test {
@@ -313,4 +218,3 @@ h1 {
 
 /* -------------------------------mynav css --------------------------------*/
 
-.navbar { background: #0069AA; margin: 0; border: 0; }
